...
                stringResource(Res.string.get_started)
            } else {
                stringResource(Res.string.next)
            }

            AppButton(
                modifier = Modifier.fillMaxWidth().testTag("onboarding_primary_button"),
                text = text,
                style = AppButtonDefaults.secondary(),
                onClick = {
                    if (lastPage) {
                        onClose()
                    } else {
...
