...
            }
        }

        AppButton(
            text = stringResource(Res.string.continue_with_olx),
            onClick = onContinueWithOlx,
            modifier = Modifier.fillMaxWidth().testTag("landing_continue_olx_button"),
            style = AppButtonStyle(
                backgroundColor = AppTheme.colors.primary,
                contentColor = AppTheme.colors.onPrimary,
            ),
            leadingIcon = null
        )
...
